[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-sales-tracker"
dynamic = ["version"]
description = "A system to track book sales and display top-selling books"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "jeffzhu503", email = "jeffzhu503@users.noreply.github.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.version]
path = "book_sales_tracker.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["book_sales_tracker.py"]

[tool.ruff]
line-length = 100
